--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="fahrenheit-box">
-<h2>That's <span id="output"></span> Fahrenheit!</h2>
+<h2>That's <span id="blankspace">_____</span><span id="output"></span> Fahrenheit!</h2>
 </div>
 
  <script src="js/index.js"></script>
